Fixed Image Stretching

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img {
     display: block;
     max-width: 25%;
     max-height: 25%;
-    width: auto;
+    width: 70%;
     height: auto;
     padding: 1%;
 }
